--- a/BlogPoster/src/index.css
+++ b/BlogPoster/src/index.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+button.primary{
+  background-color: transparent;
+  @apply p-2 w-full text-black rounded-full;
+}
