Fix: updated the default URL

--- a/BlogPoster/src/index.css
+++ b/BlogPoster/src/index.css
@@ -6,3 +6,9 @@ button.primary{
   background-color: transparent;
   @apply p-2 w-full text-black rounded-full;
 }
+
+div.transbox {
+  background-color: #ffffff;
+  border: 1px solid black;
+  opacity: 0.6;
+}
